...
                    .resizable()
                    .scaledToFit()
                    .frame(width: 200, height: 200)
                    .clipShape(Circle())

                // Sign in label
                Text("Sign in")
                    .font(.largeTitle)
                    .fontWeight(.bold)
                
                // Email TextField
                TextField("Email", text: $user.email)
                    .padding()
...
        }
    }
    
    // Function to handle user login
    func login() {
        guard Validator.isValidEmail(for: user.email) && Validator.isPasswordValid(for: user.password) else {
            user.errorMessage = "Invalid email or password."
            return
        }
        
        Auth.auth().signIn(withEmail: user.email, password: user.password) { result, error in
            if let error = error {
                user.errorMessage = error.localizedDescription
...
